--- a/my_app/my_app/templates/enseignant_instances.html
+++ b/my_app/my_app/templates/enseignant_instances.html
@@ -23,13 +23,6 @@
 			crossorigin="anonymous" 
 		/>
 
-		<!--external css-->
-		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
-		<!-- Custom styles for this template -->
-		<link href="css/style.css" rel="stylesheet">
-		<link href="css/style-responsive.css" rel="stylesheet">
-		<script src="lib/chart-master/Chart.js"></script>
 
 	</head>
 
@@ -122,6 +115,7 @@
 								<table class="table">
 									<thead>
 										<tr>
+											<th>#</th>
 											<th>Exercice</th>
 											<th>Instance</th>
 											<th></th>
@@ -130,10 +124,11 @@
 									<tbody>
 										{% for item in instance_ress %}
 										<tr>
-											<td>{{ item.exercice }}</td>
+											<td>{{ item.id }}</td>
+											<td class ="des">{{ item.exercice }}</td>
 											<td id="desig" >{{ item.desig_ins }}</td>
 											<td>
-												<button class="btn btn-info btn-xl" onclick="clickHandler"><i class="fa fa-plus"></i></button>											</td>
+												<button class="btn btn-default btn-xl" onclick="clickHandler(event)">generer</button>
 												<script>
 													function clickHandler(){
 														console.log("test");
@@ -141,6 +136,11 @@
 														console.log(va);
 													}
 												</script>
+												<button class="btn btn-primary btn-xl" onclick="clickHandler">lancer</button>
+												<button class="btn btn-info btn-xl" onclick="clickHandler">status</button>
+												<button class="btn btn-warning btn-xl" onclick="clickHandler">pause</button>
+												<button class="btn btn-warning btn-xl" onclick="clickHandler">stop</button>
+												<button class="btn btn-danger btn-xl" onclick="clickHandler">detruire</button>										
 											</td>
 										</tr>
 										{% endfor %}
@@ -155,4 +155,5 @@
 		</section>
 		<!--main content end-->
 	</body>
+	<script src="{% static 'js/script.js' %}"></script>
 </html>
