--- a/my_app/my_app/templates/eleve.html
+++ b/my_app/my_app/templates/eleve.html
@@ -104,7 +104,8 @@
 				<div class="row">
 					<div class="col-lg-12 main-chart">
 						<div class="border-head">
-							<h3>Bienvenue Eleve 1</h3>
+							<h2>Bienvenue {{ check_user.nom_elv}}</h2>
+							<hr>
 						</div>
 					</div>
 				</div>
