--- a/my_app/my_app/templates/eleve_profile.html
+++ b/my_app/my_app/templates/eleve_profile.html
@@ -107,9 +107,10 @@
 		<section id="main-content">
 			<section class="wrapper">
 				<div class="row">
-					<div class="col-lg-9 main-chart">
+					<div class="col-lg-12 main-chart">
 						<div class="border-head">
-							<h3>Eleve profile</h3>
+							<h2>Bienvenue {{ check_user.nom_elv}}</h2>
+							<hr>
 						</div>
 					</div>
 				</div>
