--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -23,14 +23,6 @@
 			crossorigin="anonymous" 
 		/>
 
-		<!--external css-->
-		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
-		<!-- Custom styles for this template -->
-		<link href="css/style.css" rel="stylesheet">
-		<link href="css/style-responsive.css" rel="stylesheet">
-		<script src="lib/chart-master/Chart.js"></script>
-
 	</head>
 
 	<body>
@@ -147,7 +139,7 @@
 					</div>
 				</div>
 
-				<div class="container">
+				<div class="container" style="margin-bottom: 40px;">
 					<div class="row">
 						<div class="col-lg-1" ></div>
 						<div class="col-lg-4 darkblue-panel pn">
@@ -174,6 +166,23 @@
 							</a>
 						</div>
 						<div class="col-lg-1" ></div>
+					</div>
+				</div>
+
+				<div class="container">
+					<div class="col-lg-4"></div>
+					<div class="row">
+						<div class="col-lg-4 darkblue-panel pn">
+							<br>
+							<br>
+							<br>
+							<i class="fa fa-bar-chart-o fa-5x"></i>
+							<br>
+							<br>
+							<a href="/enseignant/supervision">
+								<button type="button" class="btn btn-default btn-lg" style="width: 150px;">Supervision</button>
+							</a>
+						</div>
 					</div>
 				</div>
 
