--- a/my_app/my_app/templates/enseignant_supervision.html
+++ b/my_app/my_app/templates/enseignant_supervision.html
@@ -22,15 +22,6 @@
 			ntegrity="sha512-72McA95q/YhjwmWFMGe8RI3aZIMCTJWPBbV8iQY3jy1z9+bi6+jHnERuNrDPo/WGYEzzNs4WdHNyyEr/yXJ9pA==" 
 			crossorigin="anonymous" 
 		/>
-		<link href= "{% static 'css/font-awesome.min.css' %}" rel="stylesheet" />
-
-		<!--external css-->
-		<link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
-		<!-- Custom styles for this template -->
-		<link href="css/style.css" rel="stylesheet">
-		<link href="css/style-responsive.css" rel="stylesheet">
-		<script src="lib/chart-master/Chart.js"></script>
-
 	</head>
 
 	<body>
@@ -122,7 +113,6 @@
 								<table class="table">
 									<thead>
 										<tr>
-											<th>#</th>
 											<th>Nom</th>
 											<th>Resultat</th>
 											<th>Exercice</th>
@@ -132,10 +122,9 @@
 									<tbody>
 										{% for item in score_result %}
 										<tr>
-											<td>{{ item.id_score }}</td>
 											<td>{{ item.eleve }}</td>
 											<td>{{ item.value }}</td>
-											<td>{{ item.instance }}</td>
+											<td>{{ item.exercice }}</td>
 											<td>{{ item.at_time }}</td>
 										</tr>
 										{% endfor %}
